--- a/HCMS/Views/_ViewImports.cshtml
+++ b/HCMS/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using HCMS
 @using HCMS.Models
+@using HCMS.ViewModel
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
