--- a/HCMS/Views/Account/Update.cshtml
+++ b/HCMS/Views/Account/Update.cshtml
@@ -2,13 +2,13 @@
 
 
 
-<h1>Create</h1>
+<h1>Update</h1>
 
-<h4>Patient</h4>
+<h4>Doctor</h4>
 <hr />
 
 <div class="row" style="border:solid;">
-    <h2>Patient Information</h2>
+    <h2>Doctor Information</h2>
     <form asp-action="Update" method="post" asp-controller="Account">
         <div class="col-md-4" style="border:solid;">
             <div class="form-group">
