--- a/HCMS/Views/Admin/Update.cshtml
+++ b/HCMS/Views/Admin/Update.cshtml
@@ -4,11 +4,11 @@
 
 <h1>Create</h1>
 
-<h4>Patient</h4>
+<h4>Admin</h4>
 <hr />
 
 <div class="row" style="border:solid;">
-    <h2>admin Information</h2>
+    <h2>Admin Information</h2>
     <form asp-action="Update" method="post" asp-controller="Admin">
         <div class="col-md-4" style="border:solid;">
             <div class="form-group">
