--- a/HCMS/Views/Patient/index.cshtml
+++ b/HCMS/Views/Patient/index.cshtml
@@ -29,7 +29,7 @@
                         Open Modal
                     </a>*@
                     <a asp-controller="Patient" asp-action="details" asp-route-Id="@p.Id" type="button" class="btn btn-primary" data-toggle="modal" data-target="">
-                        Launch Modal
+                        Details
                     </a>
                     <a asp-controller="Patient" asp-action="edit" asp-route-Id="@p.Id">Edit</a>
                    <a asp-controller="Patient" asp-action="Delete" asp-route-Id="@p.Id">Delete</a>
