--- a/HCMS/Views/Admin/Create.cshtml
+++ b/HCMS/Views/Admin/Create.cshtml
@@ -4,11 +4,11 @@
 
 <h1>Create</h1>
 
-<h4>Patient</h4>
+<h4>Admin</h4>
 <hr />
 
 <div class="row" style="border:solid;">
-    <h2>admin Information</h2>
+    <h2>Admin Information</h2>
     <form asp-action="Create" method="post" asp-controller="Admin">
         <div class="col-md-4" style="border:solid;">
             <div class="form-group">
@@ -50,7 +50,6 @@
                 @Html.RadioButtonFor(model => model.gender, "Female")
             </div>
         </div>
-        <h2>Patient Medical Record</h2>
         <div class="form-group">
             <label asp-for="dob" class="control-label"></label>
             <input type="datetime" asp-for="dob" class="form-control" />
