--- a/HCMS/Views/DoctorSchedule/DoctorScheduleList.cshtml
+++ b/HCMS/Views/DoctorSchedule/DoctorScheduleList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Schedule>
 
-<H1>Doctor List</H1>
+<H1>Schedule List</H1>
 
 @*<a type="button" class="btn btn-primary" asp-action="Create" asp-controller="Patient">Add Patient</a>*@
 <table class="table">
@@ -23,7 +23,7 @@
                 <td>@(p.startTime?.ToString("hh:mm tt") + " to " + p.endTime?.ToString("hh:mm tt"))</td>
                 <td>
                     <a asp-controller="Admin" asp-action="Details" asp-route-Id="@p.Id" type="button" class="btn btn-primary" data-toggle="modal" data-target="">
-                        Launch Modal
+                        Details
                     </a>
                     <a asp-controller="Admin" asp-action="Update" asp-route-Id="@p.Id">Edit</a>
                     <a asp-controller="Admin" asp-action="Delete" asp-route-Id="@p.Id">Delete</a>
