--- a/HCMS/Views/Patient/Details.cshtml
+++ b/HCMS/Views/Patient/Details.cshtml
@@ -1,6 +1,108 @@
 ﻿@model Patient
 
-                        <p>@(Model.firstName + " " + Model.lastName)</p>
-                        <p>@Model.medical.bloodType</p>
 
+
+<h1>Create</h1>
+
+<h4>Patient</h4>
+<hr />
+
+<div class="row" style="border:solid;">
+    <h2>Patient Information</h2>
+    <form asp-action="Create" method="post" asp-controller="Patient">
+        <div class="col-md-4" style="border:solid;">
+            <div class="form-group">
+                <label asp-for="firstName" class="control-label"></label>
+                <input readonly asp-for="firstName" class="form-control" />
+                <span asp-validation-for="firstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="middleName" class="control-label"></label>
+                <input  readonly asp-for="middleName" class="form-control" />
+                <span asp-validation-for="middleName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="lastName" class="control-label"></label>
+                <input readonly asp-for="lastName" class="form-control" />
+                <span asp-validation-for="lastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input readonly asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="address" class="control-label"></label>
+                <input readonly asp-for="address" class="form-control" />
+                <span asp-validation-for="address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="phone" class="control-label"></label>
+                <input readonly asp-for="phone" class="form-control" />
+                <span asp-validation-for="phone" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="gender" class="control-label"></label>
+                <label>Male</label>
+                @Html.RadioButtonFor(model => model.gender, "Male",new {disabled = "disabled"})
+
+                <label>Female</label>
+                @Html.RadioButtonFor(model => model.gender, "Female" ,new {disabled = "disabled"})
+            </div>
+        </div>
+        <h2>Patient Medical Record</h2>
+        <div class="col-md-4" style="border:solid;">
+            <div class="form-group">
+                <label asp-for="@Model.medical.bloodType" class="control-label"></label>
+                <select readonly asp-for="@Model.medical.bloodType" class="form-control">
+                    <option value="A+">A+</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
+                    <option value="B-">B-</option>
+                    <option value="O+">O+</option>
+                    <option value="O-">O-</option>
+                    <option value="AB+">AB+</option>
+                    <option value="AB-">AB-</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.medical.allergy" class="control-label">Does the Patient have allergy?</label>
+                <input readonly asp-for="@Model.medical.allergy" class="form-control" />
+                <span asp-validation-for="@Model.medical.allergy" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.medical.medication" class="control-label">Does takes Medication?</label>
+                <input readonly asp-for="@Model.medical.medication" class="form-control" />
+                <span asp-validation-for="@Model.medical.medication" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.medical.surgery" class="control-label">Does Undergo surgery?</label>
+                <input readonly asp-for="@Model.medical.surgery" class="form-control" />
+                <span asp-validation-for="@Model.medical.surgery" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.medical.vacinated" class="control-label">is the Patient vacinated?</label>
+                <input readonly asp-for="@Model.medical.vacinated" class="form-control" />
+                <span asp-validation-for="@Model.medical.vacinated" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.medical.diabetic" class="control-label">Is the Patient Diabetic?</label>
+                <label>Yes</label>
+                @Html.RadioButtonFor(model => model.medical.diabetic, "No" ,new {disabled = "disabled"})
+                <label>No</label>
+                @Html.RadioButtonFor(model => model.medical.diabetic, "Yes" ,new {disabled = "disabled"})
+            </div>
+        </div>
+    </form>
+</div>
+
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
