--- a/HCMS/Views/Shared/_Layout.cshtml
+++ b/HCMS/Views/Shared/_Layout.cshtml
@@ -56,6 +56,15 @@
                             <li class="nav-item">
                                 <a class="nav-link text-danger" asp-area="" asp-controller="DoctorSchedule" asp-action="addDoctorSchedule">Doctor Scheduling</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-info" asp-area="" asp-controller="Appointment" asp-action="index">Appointment List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-info" asp-area="" asp-controller="case" asp-action="create">Create Case</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-info" asp-area="" asp-controller="Appointment" asp-action="Create">Create Appointment</a>
+                            </li>
                     </ul>
                 </div>
             </div>
