--- a/HCMS/Views/Patient/edit.cshtml
+++ b/HCMS/Views/Patient/edit.cshtml
@@ -91,12 +91,95 @@
 
         </div>
     </div>
+    @if (User.IsInRole("Doctor"))
+    {
+        <div class="accordion mt-4">
+            <div class="accordion-item">
+                <h1 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Patient Medical Record
+                    </button>
+                </h1>
+                <div class="container-fluid  py-2">
+                    <div class="row">
+                        <div class="col-md-12 bg-light rounded">
+                            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item"><a href="#" aria-current="page">Patient</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">Patient Registration</li>
+                                </ol>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
 
-    <div class="accordion mt-4">
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionBasic">
+                    <div class="accordion-body">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="@Model.medical.bloodType" class="control-label"></label>
+                                        <select asp-for="@Model.medical.bloodType" class="form-control">
+                                            <option value="A+">A+</option>
+                                            <option value="A-">A-</option>
+                                            <option value="B+">B+</option>
+                                            <option value="B-">B-</option>
+                                            <option value="O+">O+</option>
+                                            <option value="O-">O-</option>
+                                            <option value="AB+">AB+</option>
+                                            <option value="AB-">AB-</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="form-group">
+                                            <label asp-for="@Model.medical.allergy" class="control-label">Does the patient have allergy? if not, type "No"</label>
+                                            <input asp-for="@Model.medical.allergy" class="form-control" />
+                                            <span asp-validation-for="@Model.medical.allergy" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="@Model.medical.medication" class="control-label">Does the patient take medication/s? if not, type "No"</label>
+                                            <input asp-for="@Model.medical.medication" class="form-control" />
+                                            <span asp-validation-for="@Model.medical.allergy" class="text-danger"></span>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="@Model.medical.diabetic" class="control-label">Is the Patient Diabetic?</label>
+                                        <label>Yes</label>
+                                        @Html.RadioButtonFor(model => model.medical.diabetic, "No", new { @checked = "checked" })
+                                        <label>No</label>
+                                        @Html.RadioButtonFor(model => model.medical.diabetic, "Yes")
+                                    </div>
+                                    <div class="form-group">
+                                        <label asp-for="@Model.medical.surgery" class="control-label">Does the Patient Undergo any Surgery or an Operation? if not, type "No"</label>
+                                        <input asp-for="@Model.medical.surgery" class="form-control" />
+                                        <span asp-validation-for="@Model.medical.surgery" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <label asp-for="@Model.medical.vacinated" class="control-label">Is the Patient Vacinated? if not, type "No"</label>
+                                        <input asp-for="@Model.medical.vacinated" class="form-control" />
+                                        <span asp-validation-for="@Model.medical.vacinated" class="text-danger"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </div>
+        </div>
+    }
+    @*for admin*@
+    <div class="accordion mt-4" hidden>
         <div class="accordion-item">
             <h1 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Patient Registration
+                    Patient Medical Record
                 </button>
             </h1>
             <div class="container-fluid  py-2">
@@ -167,10 +250,13 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            
         </div>
+    </div>
+
+
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-primary" />
     </div>
 </form>
 
