--- a/HCMS/Views/Shared/_Layout.cshtml
+++ b/HCMS/Views/Shared/_Layout.cshtml
@@ -38,8 +38,9 @@
         <div class="container-fluid" >
             <div class="row">
             <!-- Sidebar Menu -->
-            <nav class="col-md-2 d-none d-md-block bg-white sidebar" style="font-family:monospace bold">
-                <div class="sidebar-sticky">
+
+                <nav class="col-md-2 d-none d-md-block bg-white sidebar" style="font-family:Bahnschrift Light">
+                <div class="sidebar-sticky mt-lg-5">
                     <ul class="nav flex-column" id="nav_accordion">
                         <li class="nav-item active">
                                 <a class="nav-link text-secondary"  asp-area="" asp-controller="Home" asp-action="Index">
@@ -47,25 +48,40 @@
                                     <span>Dashboard</span>
                                 </a>
                         </li>
-                        <li class="nav-item has-submenu">
-                                <a class="nav-link text-secondary" style="cursor:pointer">
+                        <li class="nav-item has-submenu mt-3 ">
+                                <a class="nav-link collapsed text-secondary" style="cursor:pointer">
                                     <i class="fas fa-user-md"></i>
                                     <span>Doctor</span>
                                 </a>
                             <ul class="submenu collapse">
-                                <li> <a class="nav-link text-secondary" asp-area="" asp-controller="Account" asp-action="Register"> Register doctor</a></li>
-                                <li><a class="nav-link text-secondary" asp-area="" asp-controller="Account" asp-action="Index">doctor List</a></li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-secondary" asp-area="" asp-controller="DoctorSchedule" asp-action="DoctorScheduleList">Doctor Schedule List</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-secondary" asp-area="" asp-controller="DoctorSchedule" asp-action="addDoctorSchedule">Doctor Scheduling</a>
-                                </li>
+                                @if(User.IsInRole("Admin")){
+                                        <li> <a class="nav-link text-secondary" asp-area="" asp-controller="Account" asp-action="Register"> Register doctor</a></li>
+                                        <li><a class="nav-link text-secondary" asp-area="" asp-controller="Account" asp-action="Index">doctor List</a></li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="DoctorSchedule" asp-action="DoctorScheduleList">Doctor Schedule List</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="DoctorSchedule" asp-action="addDoctorSchedule">Doctor Scheduling</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li><a class="nav-link text-secondary" asp-area="" asp-controller="Account" asp-action="Index">My Information</a></li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="DoctorSchedule" asp-action="DoctorScheduleList">My Schedule List</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="DoctorSchedule" asp-action="addDoctorSchedule">Add Schedule</a>
+                                        </li>
+                                    }
+
                                     
                             </ul>
                         </li>
-                        <li class="nav-item has-submenu">
-                            <a class="nav-link text-secondary" href="#"> Patient  </a>
+                            <li class="nav-item has-submenu mt-3">
+                            <a class="nav-link text-secondary" href="#">
+                                    <i class="fas fa-user-injured"></i>  <span>Patient</span>
+                                </a>
                             <ul class="submenu collapse">
                                 <li> <a class="nav-link text-secondary" asp-area="" asp-controller="Patient" asp-action="index">Patient</a></li>
                                     <li class="nav-item">
@@ -81,8 +97,10 @@
                         </li>
                             @if (User.IsInRole("Admin"))
                             {
-                                <li class="nav-item has-submenu">
-                                    <a class="nav-link text-secondary" href="#"> Admin  </a>
+                                <li class="nav-item has-submenu mt-3">
+                                    <a class="nav-link text-secondary" href="#">
+                                        <i class="fas fa-users-cog"></i> <span> Admin</span>
+                                    </a>
                                     <ul class="submenu collapse">
                                         <li class="nav-item">
                                             <a class="nav-link text-secondary" asp-area="" asp-controller="Admin" asp-action="AdminList">Admin List</a>
@@ -93,8 +111,8 @@
                                     </ul>
                                 </li>
 
-                                <li class="nav-item has-submenu">
-                                    <a class="nav-link text-secondary" href="#"> Appointment  </a>
+                                <li class="nav-item has-submenu mt-3">
+                                    <a class="nav-link text-secondary" href="#"><i class="fas fa-calendar-alt"></i><span> Appointment</span>   </a>
                             <ul class="submenu collapse">
                                 <li class="nav-item">
                                     <a class="nav-link text-secondary" asp-area="" asp-controller="Appointment" asp-action="index">Appointment List</a>
@@ -103,8 +121,20 @@
                                     <a class="nav-link text-secondary" asp-area="" asp-controller="Appointment" asp-action="Create">Create Appointment</a>
                                 </li>
                             </ul>
-                        </li>}
-                    </ul>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item has-submenu mt-3">
+                                    <a class="nav-link text-secondary" href="#"> <i class="fas fa-calendar-alt"></i><span> Appointment</span>   </a>
+                                    <ul class="submenu collapse">
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="Appointment" asp-action="index">My Appointment List</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            }
+                        </ul>
                 </div>
             </nav>
 
