--- a/HCMS/Views/DoctorSchedule/AddDoctorSchedule.cshtml
+++ b/HCMS/Views/DoctorSchedule/AddDoctorSchedule.cshtml
@@ -34,7 +34,7 @@
                                     }
                                     else
                                     {
-                                        <input type="text" asp-for="doctorId" class="form-control" value="@ViewBag.MyValue" />
+                                        <input type="text" hidden asp-for="doctorId" class="form-control" value="@ViewBag.MyValue" />
                                     }
 
                                 </div>
