--- a/HCMS/Views/Account/Details.cshtml
+++ b/HCMS/Views/Account/Details.cshtml
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="dob" class="control-label">Date of Birth</label>
-                                    <input readonly type="datetime" asp-for="dob" class="form-control" />
+                                    <input readonly type="date" asp-for="dob" class="form-control" />
                                     <span asp-validation-for="dob" class="text-danger"></span>
                                 </div>
                             </div>
