--- a/HCMS/Views/Home/Index.cshtml
+++ b/HCMS/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                <i class="fas fa-columns fa-pulse"></i> Dashboard
+                                <i class="fas fa-columns fa-pulse"></i> Dashboardasd
                             </div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800" id="totalAsset"></div>
                         </div>
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
 
-    <div class="col-xl-6 col-md-6 mb-2">
+  @*  <div class="col-xl-6 col-md-6 mb-2">
             <div class="card border-left-primary shadow h-100 py-2">
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
@@ -32,7 +32,7 @@
                             <div class="h5 mb-0 font-weight-bold text-gray-800" id="totalAsset"></div>
                         </div>
                         <div class="col-auto">
-                           @* <i class="fas fa-boxes fa-2x text-gray-300"></i>*@
+                         
                         </div>
                     </div>
                 </div>
@@ -50,12 +50,12 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800" id = 'consumable'></div>
                                         </div>
                                         <div class="col-auto">
-                                            @*<i class="fas fa-shopping-basket fa-2x text-gray-300"></i>*@
+                                          
                                         </div>
                                     </div>
                                 </div>
                                 </a>
                             </div>
                         </div>
-</div>
+</div>*@
 </div>
