--- a/HCMS/Views/Account/login.cshtml
+++ b/HCMS/Views/Account/login.cshtml
@@ -8,50 +8,22 @@
                     <div class="card-body p-5 text-center">
                         <form asp-controller="Account" asp-action="Login" method="post">
                         <h3 class="mb-5">Log in</h3>
-
                         <div class="form-outline mb-4">
                             <span asp-validation-for="UserName"></span>
                             <input asp-for="UserName" type="email" id="typeEmailX-2" class="form-control form-control-lg" />
                             <label asp-for="UserName" class="form-label" for="typeEmailX-2">Email</label>
+                             <span asp-validation-for="UserName" class="text-danger"></span>
                         </div>
-
                         <div class="form-outline mb-4">
                             <span asp-validation-for="Password"></span>
                             <input asp-for="Password" type="password" id="typePasswordX-2" class="form-control form-control-lg" />
                             <label asp-for="Password" class="form-label" for="typePasswordX-2">Password</label>
+                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
-
-
                         <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-
-
                     </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-@*<h1>Login User</h1>
-
-<form asp-controller="Account" asp-action="Login" method="post">
-    <div asp-validation-summary="All" class="text-danger">
-    </div>
-    <div>
-        <label asp-for="UserName"></label>
-        <input asp-for="UserName" />
-        <span asp-validation-for="UserName"></span>
-    </div>
-
-    <div>
-        <label asp-for="Password"></label>
-        <input asp-for="Password" />
-        <span asp-validation-for="Password"></span>
-    </div>
-    <div>
-        <label asp-for="RememberMe"></label>
-        <input asp-for="RememberMe" />
-    </div>
-    <button type="submit">Login</button>
-</form>*@
