--- a/HCMS/Views/Appointment/Update.cshtml
+++ b/HCMS/Views/Appointment/Update.cshtml
@@ -35,13 +35,8 @@
                                     @* @Html.DropDownList("caseId",ViewBag.optionsForCases as SelectList ,ViewBag.option?[0], new {@class ="form-control"})*@
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="DoctorId" class="control-label">Select Doctor</label>
-                                    @Html.DropDownListFor( m => m.DoctorId ,ViewBag.optionsForDoctor as SelectList, new {@class ="form-control", type ="select", id ="doctor"} )
-                                    @*@Html.DropDownList("DoctorId",ViewBag.optionsForDoctor as SelectList ,ViewBag.option?[0], new {@class ="form-control"})*@
-                                </div>
-                                <div class="form-group">
                                     <label asp-for="appointmentDay" class="control-label">Select Appointment Day</label>
-                                    <select  asp-for="appointmentDay" class="form-control">
+                                    <select asp-for="appointmentDay" class="form-control">
                                         <option value="Monday">Monday</option>
                                         <option value="Tuesday">Tuesday</option>
                                         <option value="Wednesday">Wednesday</option>
@@ -50,7 +45,14 @@
                                         <option value="Saturday">Saturday</option>
                                         <option value="Sunday">Sunday</option>
                                     </select>
+                                    <span asp-validation-for="appointmentDay" class="text-danger"></span>
                                 </div>
+                                <div class="form-group">
+                                    <label asp-for="DoctorId" class="control-label">Select Doctor</label>
+                                    @Html.DropDownListFor( m => m.DoctorId ,ViewBag.optionsForDoctor as SelectList, new {@class ="form-control", type ="select", id ="doctor"} )
+                                    @*@Html.DropDownList("DoctorId",ViewBag.optionsForDoctor as SelectList ,ViewBag.option?[0], new {@class ="form-control"})*@
+                                </div>
+                                
                                 <div class="form-group">
                                     <label asp-for="appointmentime" class="control-label">Appointment Time</label>
                                     <input  type="time" asp-for="appointmentime" class="form-control" />
