--- a/HCMS/Views/Case/Create.cshtml
+++ b/HCMS/Views/Case/Create.cshtml
@@ -39,7 +39,7 @@
                                     <span asp-validation-for="reason" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="diagnosis" class="control-label">Reason</label>
+                                    <label asp-for="diagnosis" class="control-label">Diagnosis</label>
                                     <input type="text" asp-for="diagnosis"  class="form-control"  />
                                     <span asp-validation-for="diagnosis" class="text-danger"></span>
                                 </div>
