--- a/HCMS/Views/DoctorSchedule/Update.cshtml
+++ b/HCMS/Views/DoctorSchedule/Update.cshtml
@@ -28,6 +28,7 @@
                                 <div class="form-group">
                                     <label asp-for="doctorId" class="control-label">Doctor</label>
                                     @Html.DropDownListFor( m => m.doctorId ,ViewBag.options as SelectList, new {@class ="form-control"})
+                                    <span asp-validation-for="doctorId" class="text-danger"></span>
                                     @*@Html.DropDownList("doctorId",ViewBag.options as SelectList ,ViewBag.option?[0], new {@class ="form-control"})*@
                                 </div>
                                 <div class="form-group">
@@ -41,6 +42,7 @@
                                         <option value="Saturday">Saturday</option>
                                         <option value="Sunday">Sunday</option>
                                     </select>
+                                    <span asp-validation-for="dayOfWeek" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="startTime" class="control-label">Select a start time</label>
