--- a/HCMS/Views/Home/Index.cshtml
+++ b/HCMS/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@inject SignInManager<ApplicationUser> _signInManager
 
 <div class="container-fluid  mt-4">
     <div class="row">
@@ -9,8 +10,8 @@
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                <i class="fas fa-columns fa-pulse"></i> Dashboardasd
+                            <div class="text-xs font-weight-bold text-primary mb-1">
+                                <center><h1 class="display-6 text-secondary" style="font-family:Bahnschrift SemiBold">Welcome! <i class="fas fa-hand-sparkles"></i></h1> </center>
                             </div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800" id="totalAsset"></div>
                         </div>
@@ -19,43 +20,4 @@
             </div>
         </div>
     </div>
-    <div class="row">
-
-  @*  <div class="col-xl-6 col-md-6 mb-2">
-            <div class="card border-left-primary shadow h-100 py-2">
-                <div class="card-body">
-                    <div class="row no-gutters align-items-center">
-                        <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                Patient Count
-                            </div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="totalAsset"></div>
-                        </div>
-                        <div class="col-auto">
-                         
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </div>
-
-    <div class="col-xl-6 col-md-6 mb-2">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <a href="../consumables/consumables.php">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Appointment Count</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id = 'consumable'></div>
-                                        </div>
-                                        <div class="col-auto">
-                                          
-                                        </div>
-                                    </div>
-                                </div>
-                                </a>
-                            </div>
-                        </div>
-</div>*@
 </div>
