--- a/HCMS/Views/Patient/edit.cshtml
+++ b/HCMS/Views/Patient/edit.cshtml
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="dob" class="control-label">Date of Birth</label>
-                                    <input type="datetime" asp-for="dob" class="form-control" />
+                                    <input type="date" asp-for="dob" class="form-control" />
                                     <span asp-validation-for="dob" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
