--- a/HCMS/Views/Appointment/Details.cshtml
+++ b/HCMS/Views/Appointment/Details.cshtml
@@ -30,12 +30,12 @@
                             <div class="col-md-12">
                                 @*<div class="col-md-4">*@
                                 <div class="form-group">
-                                    <label asp-for="caseId" class="control-label">Select Case</label>
+                                    <label asp-for="caseId" class="control-label">Patient Case</label>
                                     @Html.DropDownListFor( m => m.caseId ,ViewBag.optionsForCases as SelectList, new {@class ="form-control", disabled = "disabled", type ="select"})
                                    @* @Html.DropDownList("caseId",ViewBag.optionsForCases as SelectList ,ViewBag.option?[0], new {@class ="form-control"})*@
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="DoctorId" class="control-label">Select Doctor</label>
+                                    <label asp-for="DoctorId" class="control-label"> Doctor</label>
                                     @Html.DropDownListFor( m => m.DoctorId ,ViewBag.optionsForDoctor as SelectList, new {@class ="form-control", disabled = "disabled", type ="select"})
                                     @*@Html.DropDownList("DoctorId",ViewBag.optionsForDoctor as SelectList ,ViewBag.option?[0], new {@class ="form-control"})*@
                                 </div>
