--- a/HCMS/Views/Patient/edit.cshtml
+++ b/HCMS/Views/Patient/edit.cshtml
@@ -78,13 +78,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <p>Medical Record</p>
-                            <div class="col-md-6">
-                            </div>
-                            <div class="col-md-6">
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -251,14 +245,14 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="form-group">
+                <input type="submit" value="Update" class="btn btn-primary" />
+            </div>
         </div>
     </div>
 
 
-    <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
-    </div>
+    
 </form>
 
 <div>
