--- a/HCMS/Views/Shared/_Layout.cshtml
+++ b/HCMS/Views/Shared/_Layout.cshtml
@@ -113,14 +113,26 @@
 
                                 <li class="nav-item has-submenu mt-3">
                                     <a class="nav-link text-secondary" href="#"><i class="fas fa-calendar-alt"></i><span> Appointment</span>   </a>
-                            <ul class="submenu collapse">
-                                <li class="nav-item">
-                                    <a class="nav-link text-secondary" asp-area="" asp-controller="Appointment" asp-action="index">Appointment List</a>
+                                    <ul class="submenu collapse">
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="Appointment" asp-action="index">Appointment List</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="Appointment" asp-action="Create">Create Appointment</a>
+                                        </li>
+                                    </ul>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-secondary" asp-area="" asp-controller="Appointment" asp-action="Create">Create Appointment</a>
-                                </li>
-                            </ul>
+
+                                <li class="nav-item has-submenu mt-3">
+                                    <a class="nav-link text-secondary" href="#"><i class="fas fa-calendar-alt"></i><span> Doctor Specialization</span>   </a>
+                                    <ul class="submenu collapse">
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="Speciality" asp-action="index">Specialization List</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-secondary" asp-area="" asp-controller="Speciality" asp-action="Create">Create Specialization</a>
+                                        </li>
+                                    </ul>
                                 </li>
                             }
                             else
