update, done mvc  web app

--- a/HCMS/Views/Admin/AdminList.cshtml
+++ b/HCMS/Views/Admin/AdminList.cshtml
@@ -49,6 +49,9 @@
                                                 <a class="btn btn-secondary" asp-controller="Admin" title="Update" asp-action="Update" asp-route-Id="@p.Id">
                                                     <i class="fas fa-edit"></i>
                                                 </a>
+                                                <a class="btn btn-secondary" asp-controller="Admin" title="ChangePassword" asp-action="ChangePassword" asp-route-Id="@p.Id">
+                                                    <i class="fas fa-user-edit"></i>
+                                                </a>
                                                 <a class="btn btn-danger" asp-controller="Admin" title="Delete" asp-action="Delete" asp-route-Id="@p.Id">
                                                     <i class="fas fa-user-times"></i>
                                                 </a>
