--- a/HCMS/Views/Account/Index.cshtml
+++ b/HCMS/Views/Account/Index.cshtml
@@ -56,7 +56,7 @@
                                                     <i class="fas fa-edit"></i>
                                                 </a>
                                                 <a class="btn btn-secondary" asp-controller="Account" title="Change Password" asp-action="ChangePassword" asp-route-Id="@p.Id">
-                                                    <i class="fas fa-edit"></i>
+                                                    <i class="fas fa-user-edit"></i>
                                                 </a>
                                                 @if (User.IsInRole("Admin"))
                                                 {
